поменяна иконка, добавил удаление ребенка, добавлено окно для подтверждения ребенка, так же в бд при занесении ребенка также добавляется индивидуальный id по которому у происходит удаление из ДБ

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="add_child_button">добавить ребенка</string>
     <string name="Name">Имя</string>
     <string name="father_name">Отчество</string>
-    <string name="birthday">ДД.ММ.ГГГГ</string>
+    <string name="birthday">ДД/ММ/ГГГГ</string>
     <string name="lastName">Фамилия</string>
     <string-array name="SmesiNames">
         <item> </item>
